fix code display being too large

--- a/styles/components/_text.scss
+++ b/styles/components/_text.scss
@@ -15,7 +15,7 @@
     font-family: 'Domine', serif;
   }
 
-  &.-medium {
+  &.-medium > p {
     font-size: 20px;
   }
 
